--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,13 @@ name: GitHub Actions Demo
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - "*"
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   Experiment-With-Actions:
     runs-on: ubuntu-latest
