--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - run: echo "❤️ Commit is for [ci full]"
-        if: ${{ contains(github.event.head_commit.message, "[ci full]")  }}
+        if: "contains(github.event.head_commit.message, '[ci full]')"
       - name: Last step failed
         run: echo
         if: ${{ failure() }}
