--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,34 @@ on:
       - "*"
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
+  #   inputs:
+  #     clients: [main, demo]
 jobs:
+  prepare-matrix:
+    runs-on: ubuntu-latest
+
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - id: set-matrix
+        if: "contains(github.event.head_commit.message, '[ci full]')"
+        run: |
+          branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')
+          echo ::set-output name=matrix::{\"['main', 'demo']\"
+        # run: |
+        #   branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')
+        #   matrix=$(jq --arg branchName "$branchName" 'map(. | select((.runOn==$branchName) or (.runOn=="always")) )' matrix_includes.json)
+        #   echo ::set-output name=matrix::{\"include\":$(echo $matrix)}\"
+
   Experiment-With-Actions:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        client: [main, demo, staff]
+        # client: [main, demo, staff]
+        client: ${{fromJson(needs.matrix_prep.outputs.matrix)}}
       fail-fast: false
     steps:
       - run: echo "🧖‍♀️ The job is running for client ${{ matrix.client }}."
