Commit A [ci full]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
   #   inputs:
   #     clients: [main, demo]
 jobs:
-  prepare-matrix:
+  matrix_prep:
     runs-on: ubuntu-latest
 
     outputs:
