--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
         # if: "contains(github.event.head_commit.message, '[ci full]')"
         run: |
           branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')
-          echo ::set-output name=matrix::\["main", "demo"\]
+          matrix=["main", "demo"]
+          echo ::set-output name=matrix::{\"include\":$(echo $matrix)}
         # run: |
         #   branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')
         #   matrix=$(jq --arg branchName "$branchName" 'map(. | select((.runOn==$branchName) or (.runOn=="always")) )' matrix_includes.json)
