--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,13 @@ jobs:
   Experiment-With-Actions:
     needs: matrix_prep
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # client: [main, demo, staff]
-        client: ${{fromJson(needs.matrix_prep.outputs.matrix)}}
-      fail-fast: false
+    # strategy:
+    #   matrix:
+    #     # client: [main, demo, staff]
+    #     client: ${{fromJson(needs.matrix_prep.outputs.matrix)}}
+    #   fail-fast: false
     steps:
+      - run: echo "Output ${{ needs.matrix_prep.outputs.matrix }}"
       - run: echo "🧖‍♀️ The job is running for client ${{ matrix.client }}."
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
