--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: GitHub Actions Demo
 on:
   push:
     branches:
-      - main
+      - $default-branch
   pull_request:
     branches:
       - "*"
@@ -22,15 +22,27 @@ jobs:
       #   uses: actions/checkout@v2
       - id: set-matrix
         name: running set matrix
+        env:
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         # if: "contains(github.event.head_commit.message, '[ci full]')"
         run: |
-          echo "::set-output name=matrix::[\"main\",\"demo\"]"
+          if [ ! -z ${GITHUB_HEAD_REF+x} ]; then
+              echo "GITHUB_HEAD_REF is blank"
+              echo "::set-output name=matrix::[\"main\",\"demo\"]"
+          else
+              echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on main)"
+              echo "::set-output name=matrix::[\"main\"]"
+          fi
+          echo "::warning file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
+
+        # run: |
+        #   echo "::set-output name=matrix::[\"main\",\"demo\"]"
         # run: |
         #   branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')
         #   matrix=$(jq --arg branchName "$branchName" 'map(. | select((.runOn==$branchName) or (.runOn=="always")) )' matrix_includes.json)
         #   echo ::set-output name=matrix::{\"include\":$(echo $matrix)}\"
 
-  Experiment-With-Actions:
+  test:
     needs: matrix_prep
     runs-on: ubuntu-latest
     strategy:
