--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,12 @@ jobs:
         # if: "contains(github.event.head_commit.message, '[ci full]')"
         run: |
           echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} "
+          echo "interpolate ${{ github.event.head_commit.message }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           if [ ! -z ${GITHUB_HEAD_REF+x} ]; then
               echo "GITHUB_HEAD_REF is set"
               echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on main)"
-              echo "::warning  Running on a branch so only running tests for the 'main' client"
+              echo "::warning::Running on a branch so only running tests for the 'main' client"
               echo "::set-output name=matrix::[\"main\"]"
 
 
