--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         # if: "contains(github.event.head_commit.message, '[ci full]')"
         run: |
-          echo "GITHUB_HEAD_REF is $GITHUB_HEAD_REF"
+          echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF}"
           echo "interpolate ${{ github.event.head_commit.message }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           if [ ! -z ${GITHUB_HEAD_REF+x} ]; then
@@ -37,6 +37,7 @@ jobs:
               echo "::warning::Running on a branch so only running tests for the 'main' client"
               echo "::set-output name=matrix::[\"main\"]"
           else
+              echo "GITHUB_HEAD_REF is blank '${GITHUB_HEAD_REF}'"
               echo "::notice::Running on master so setting CI matrix to all clients"
               echo "::set-output name=matrix::[\"main\",\"demo\"]"
           fi
