--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ on:
   #   inputs:
   #     clients: [main, demo]
 jobs:
+  env:
+    commitmsg: ${{ github.event.head_commit.message }}
   configure_matrix:
     name: Configure CI matrix
     runs-on: ubuntu-latest
@@ -30,6 +32,7 @@ jobs:
           echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF}"
           echo "interpolate ${{ github.event.head_commit.message }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
+          echo Commit MSG = ${{ env.commitmsg }}
           if [ ! -z "$GITHUB_HEAD_REF" ]; then
               echo "GITHUB_HEAD_REF is set"
               echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on main)"
@@ -57,6 +60,9 @@ jobs:
         client: ${{fromJson(needs.configure_matrix.outputs.matrix)}}
       fail-fast: false
     steps:
+      - name: get commit message
+        run: |
+          echo Commit MSG = ${{ env.commitmsg }}
       - run: echo "Output ${{ needs.configure_matrix.outputs.matrix }}"
       - run: echo "Output ${{ fromJson(needs.configure_matrix.outputs.matrix) }}"
       - name: Last step failed
