--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ on:
   #   inputs:
   #     clients: [main, demo]
 jobs:
-  env:
-    commitmsg: ${{ github.event.head_commit.message }}
+  # env:
+  #   commitmsg: ${{ github.event.head_commit.message }}
   configure_matrix:
     name: Configure CI matrix
     runs-on: ubuntu-latest
@@ -21,6 +21,9 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+      - name: set the head commit message as env
+        run: |
+          echo '::set-env name=commitmsg::${{ github.event.head_commit.message }}'
       # - name: Check out code into the Go module directory
       #   uses: actions/checkout@v2
       - id: set-matrix
