--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
       - id: set-head-commit
         name: set the head commit message as env
         run: |
-          echo "COMMITMSG={{ github.event.head_commit.message }}" >> $GITHUB_ENV
+          echo "COMMITMSG=${ github.event.head_commit.message }" >> $GITHUB_ENV
       - id: set-matrix
         name: running set matrix
         # env:
@@ -29,7 +29,7 @@ jobs:
           echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} hello"
           echo "interpolate ${{ github.event.head_commit.message }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
-          echo "COMMIT_MESSAGE altt: ${env.commit_message}"
+          echo "COMMIT_MESSAGE altt: ${env.commitmsg}"
           echo Commit MSG = ${ env.commitmsg }
           if [ ! -z "$GITHUB_HEAD_REF" ]; then
               echo "GITHUB_HEAD_REF is set"
