--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on:
   push:
-    branches: [$default-branch]
+    branches: [main]
   pull_request:
     branches:
       - "*"
