--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} hello"
           echo "interpolate ${{ github.event.head_commit.message }}"
-          echo "interpolate contains ${{ contains(github.event.head_commit.message, "ci full") }}"
+          echo "interpolate contains ${{ contains(github.event.head_commit.message, \"ci full\") }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${env.commitmsg}"
           echo Commit MSG = ${ env.commitmsg }
