--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -30,8 +30,8 @@ jobs:
           echo "interpolate ${{ github.event.head_commit.message }}"
           echo "interpolate contains ${{ contains(github.event.head_commit.message, 'ci full') }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
-          echo "COMMIT_MESSAGE altt: ${env.commitmsg}"
-          echo Commit MSG = ${ env.commitmsg }
+          echo "COMMIT_MESSAGE altt: ${{env.commitmsg}}"
+
           if [ ! -z "$GITHUB_HEAD_REF" ]; then
               echo "GITHUB_HEAD_REF is set"
               echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on main)"
