Bash [ci fumasadl]

--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -33,7 +33,7 @@ jobs:
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}}"
 
-          if [ ! -z "$GITHUB_HEAD_REF" ] || [ "$requested_all_clients" == "true" ]; then
+          if [ ! -z "$GITHUB_HEAD_REF" || "$requested_all_clients" == "true" ]; then
               echo "GITHUB_HEAD_REF is set"
               echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on main)"
               echo "::warning::Running on a branch so only running tests for the 'main' client"
