--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
+    branches: [*]
 
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
@@ -29,6 +29,8 @@ jobs:
           echo "interpolate ${{ github.event.head_commit.message }}"
           echo "interpolate contains ${{ contains(github.event.head_commit.message, 'ci full') }}"
           echo "requested_all_clients=${{ contains(github.event.head_commit.message, 'ci full') }}"
+          echo "on_pull_reqhead_refuest=${{ github.head_ref}}"
+          echo "on_pull_request=${{ github.head_ref != '' }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}}"
 
