--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -20,6 +20,9 @@ jobs:
         name: set the head commit message as env
         run: |
           echo "COMMITMSG=${{ github.event.head_commit.message }}" >> $GITHUB_ENV
+      - run: echo $GITHUB_CONTEXT
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
       - id: set-matrix
         name: set matrix
         # env:
