--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -29,10 +29,12 @@ jobs:
         #   COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
           echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} hello"
-          echo "interpolate ${{ github.event.head_commit.message }}"
+          echo "interpolate '${{ github.event.head_commit.message }}'"
           echo "interpolate contains ${{ contains(github.event.head_commit.message, 'ci full') }}"
           echo "requested_all_clients=${{ contains(github.event.head_commit.message, 'ci full') }}"
           echo "branch=$(echo ${GITHUB_REF#refs/heads/})"
+          echo "branchreffrominterp=${{ github.event.ref }}"
+          echo "on_main=${{ contains(github.event.ref, 'refs/head/main' }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}} try again"
 
