--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -34,7 +34,7 @@ jobs:
           echo "requested_all_clients=${{ contains(github.event.head_commit.message, 'ci full') }}"
           echo "branch=$(echo ${GITHUB_REF#refs/heads/})"
           echo "branchreffrominterp=${{ github.event.ref }}"
-          echo "on_main=${{ contains(github.event.ref, 'refs/head/main' }}"
+          echo "on_main=${{ contains(github.event.ref, 'refs/head/main') }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}} try again"
 
