--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -35,6 +35,8 @@ jobs:
           echo "branch=$(echo ${GITHUB_REF#refs/heads/})"
           echo "branchreffrominterp=${{ github.event.ref }}"
           echo "on_main=${{ contains(github.event.ref, 'refs/head/main') }}"
+          echo "on_main=${{ startsWith(github.event.ref, 'refs/head/main') }}"
+          echo "on_main=${{ github.event.ref == 'refs/head/main' }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}} try again"
 
