--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -40,18 +40,19 @@ jobs:
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}} try again"
 
-          if [ -z "$GITHUB_HEAD_REF"  || "$requested_all_clients" == "true" ]; then
+          if [ "$on_main" == "true"  || "$requested_all_clients" == "true" ]; then
               echo "GITHUB_HEAD_REF is NOT blank '${GITHUB_HEAD_REF}' or requested_all_clients: ${requested_all_clients} "
               if [ "$requested_all_clients" == "true" ]; then
                 echo "::notice::Commit message included 'ci full' so setting CI matrix to all clients"
-              else
-                echo "::notice::Running on master branch so setting CI matrix to all clients"
               fi;
 
+              if [ "$on_main" == "true" ]; then
+                echo "::notice::Running on master branch so setting CI matrix to all clients"
+              fi;
               echo "::set-output name=matrix::[\"main\",\"demo\"]"
           else
               echo "GITHUB_HEAD_REF is not null"
-              echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on main)"
+              echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} (so only running on single client)"
               echo "::notice::Running on a branch so only running tests for the 'main' client"
               echo "::set-output name=matrix::[\"main\"]"
           fi
