Something in the dark forest ci full

--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,9 +1,7 @@
 name: Customizable
 on:
   push:
-    branches:
-      - main
-      - "refs/pull/*"
+    branches: [*]
   pull_request:
     branches: [main]
     types: [opened, synchronize, reopened]
