--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,6 +1,12 @@
 name: Customizable
 on:
   push:
+  workflow_dispatch:
+    inputs:
+      client_name:
+        description: "Client"
+        required: false
+        default: "main"
   pull_request:
     branches: [main]
     types: [opened, synchronize, reopened]
@@ -16,6 +22,19 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+      - name: Get branch name (merge)
+        if: ${{github.event_name != 'pull_request'}}
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
+
+      - name: Get branch name (pull request)
+        if: ${{github.event_name == 'pull_request'}}
+        shell: bash
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_HEAD_REF} | tr / -)" >> $GITHUB_ENV
+
+      - name: Debug
+        run: echo ${{ env.BRANCH_NAME }}
+
       - id: set-head-commit
         name: set the head commit message as env
         run: |
@@ -34,6 +53,8 @@ jobs:
           echo "interpolate '${{ github.event.head_commit.message }}'"
           echo "interpolate contains ${{ contains(github.event.head_commit.message, 'ci full') }}"
           echo "requested_all_clients=${{ contains(github.event.head_commit.message, 'ci full') }}"
+
+          echo "Hello ${{ github.event.inputs.client_name }}!"
           echo "branch=$(echo ${GITHUB_REF#refs/heads/})"
           echo "branchreffrominterp=${{ github.event.ref }}"
           echo "on_main=${{ contains(github.event.ref, 'refs/heads/main') }}"
