--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -1,6 +1,7 @@
 name: Customizable
 on:
   push:
+    branches: [main]
   workflow_dispatch:
     inputs:
       client_name:
@@ -34,6 +35,7 @@ jobs:
           echo "event sha: ${{github.event.sha }}"
           echo git log --format=%B -n 1 $GITHUB_SHA
           echo "X_PR_COMMIT=$(git log --format=%B -n 1 ${GITHUB_SHA})" >> $GITHUB_ENV
+          echo "X_LAST_COMMIT=$(echo git log -1 --pretty=%B)" >> $GITHUB_ENV
 
       - name: Get branch name (merge)
         if: ${{github.event_name != 'pull_request'}}
