--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -34,8 +34,11 @@ jobs:
           echo "sha from GITHUB_SHA: ${GITHUB_SHA}"
           echo "event sha: ${{github.event.sha }}"
           echo git log --format=%B -n 1 $GITHUB_SHA
+          echo "git log --format=%B -n 1 $GITHUB_SHA"
+          echo git log -1 --pretty=%B
+          echo "git log -1 --pretty=%B"
           echo "X_PR_COMMIT=$(git log --format=%B -n 1 ${GITHUB_SHA})" >> $GITHUB_ENV
-          echo "X_LAST_COMMIT=$(echo git log -1 --pretty=%B)" >> $GITHUB_ENV
+          echo "X_LAST_COMMIT=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
 
       - name: Get branch name (merge)
         if: ${{github.event_name != 'pull_request'}}
