--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           echo "sha from GITHUB_SHA: ${GITHUB_SHA}"
           echo "event sha: ${{github.event.sha }}"
+          echo "event after sha: ${{github.event.after }}"
           echo git log --format=%B -n 1 $GITHUB_SHA
           echo "git log --format=%B -n 1 $GITHUB_SHA"
           echo git log -1 --pretty=%B
