--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
+      commit_message: ${{ steps.get_commit_message.outputs.commit_message }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
@@ -38,6 +39,9 @@ jobs:
             echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD^2)
           fi
 
+      - name: Did we?
+        run: |
+          echo "${{steps.get_commit_message.outputs.commit_message}}"
       - name: Get pull request commit message from SHA
         if: ${{github.event_name == 'pull_request'}}
         shell: bash
@@ -48,8 +52,8 @@ jobs:
           echo git log --format=%B -n 1 $GITHUB_SHA
           echo "git log --format=%B -n 1 $GITHUB_SHA"
           echo git log -1 --pretty=%B
-          echo "X_PR_COMMIT=$(git log --format=%B -n 1 ${{ github.event.after }})"
-          echo "X_PR_COMMIT=$(git log --format=%B -n 1 ${{ github.event.after }})" >> $GITHUB_ENV
+          echo "X_PR_COMMIT=$(git log --no-merges --oneline --format=%B -n 1 ${{ github.event.after }})"
+          echo "X_PR_COMMIT=$(git log --no-merges --oneline --format=%B -n 1 ${{ github.event.after }})" >> $GITHUB_ENV
           echo "X_LAST_COMMIT=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
           echo " --no-merges -1 --oneline"
           echo "X_LAST_COMMIT_ONE=$(git log --no-merges -1 --oneline)"
