--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -26,22 +26,32 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
         with:
-          # for pull_request so we can do HEAD^2
+          # required for pull_requests so we can do HEAD^2 to get the commit message
           fetch-depth: 2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
 
       - name: Get commit message
         id: get_commit_message
         run: |
-          if   [[ '${{ github.event_name }}' == 'push' ]]; then
+          if [[ '${{ github.event_name }}' == 'push' ]]; then
             echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD)
           elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
             echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD^2)
           fi
 
+      - name: Get branch
+        id: get_branch
+        run: |
+          if [[ '${{ github.event_name }}' == 'push' ]]; then
+            echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/} | tr / -)
+          elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
+            echo ::set-output name=branch::$(echo ${GITHUB_HEAD_REF} | tr / -)
+          fi
+
       - name: Did we?
         run: |
           echo "${{steps.get_commit_message.outputs.commit_message}}"
+          echo "${{steps.get_commit_message.outputs.branch}}"
       - name: Get pull request commit message from SHA
         if: ${{github.event_name == 'pull_request'}}
         shell: bash
@@ -80,28 +90,28 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
           X_ON_MAIN_BRANCH: ${{ contains(github.event.ref, 'refs/heads/main') }}
-          X_REQUESTED_ALL_CLIENTS: ${{ contains(github.event.head_commit.message, 'ci full') }}
+          X_REQUESTED_ALL_CLIENTS: ${{ contains(steps.get_commit_message.outputs.commit_message, 'ci full') }}
       - id: set-matrix
         name: set matrix
         # env:
         #   COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
           echo "GITHUB_HEAD_REF is ${GITHUB_HEAD_REF} hello"
-          echo "interpolate '${{ github.event.head_commit.message }}'"
-          echo "interpolate contains ${{ contains(github.event.head_commit.message, 'ci full') }}"
-          echo "requested_all_clients=${{ contains(github.event.head_commit.message, 'ci full') }}"
+          echo "interpolate '${{ steps.get_commit_message.outputs.commit_message }}'"
+          echo "Checking commit message for 'ci full' -- ${{ steps.get_commit_message.outputs.commit_message }}"
+          echo "requested_all_clients=${{ contains(steps.get_commit_message.outputs.commit_message, 'ci full') }}"
 
           echo "Hello ${{ github.event.inputs.client_name }}!"
           echo "branch=$(echo ${GITHUB_REF#refs/heads/})"
           echo "branchreffrominterp=${{ github.event.ref }}"
-          echo "on_main=${{ contains(github.event.ref, 'refs/heads/main') }}"
-          echo "on_main=${{ startsWith(github.event.ref, 'refs/heads/main') }}"
-          echo "on_main=${{ github.event.ref == 'refs/heads/main' }}"
+          echo "Checking env.BRANCH_NAME to see if we are on 'main' -- ${{ env.BRANCH_NAME }}"
+          echo "on_main=${{ contains(env.BRANCH_NAME, 'refs/heads/main') }}"
+          echo "on_main=${{ startsWith(env.BRANCH_NAME, 'refs/heads/main') }}"
+          echo "on_main=${{ env.BRANCH_NAME == 'refs/heads/main' }}"
           echo "COMMIT_MESSAGE: ${COMMIT_MESSAGE}"
           echo "COMMIT_MESSAGE altt: ${{env.commitmsg}} try again"
 
-          if [ "$on_main" == "true"  || "$requested_all_clients" == "true" ]; then
-              echo "GITHUB_HEAD_REF is NOT blank '${GITHUB_HEAD_REF}' or requested_all_clients: ${requested_all_clients} "
+          if [ "$X_ON_MAIN_BRANCH" == "true"  || "$X_REQUESTED_ALL_CLIENTS" == "true" ]; then
               if [ "$requested_all_clients" == "true" ]; then
                 echo "::notice::Commit message included 'ci full' so setting CI matrix to all clients"
               fi;
