--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -22,6 +22,7 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
       commit_message: ${{ steps.get_commit_message.outputs.commit_message }}
+      branch: ${{ steps.get_branch.outputs.branch }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
