--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -44,9 +44,9 @@ jobs:
         id: get_branch
         run: |
           if [[ '${{ github.event_name }}' == 'push' ]]; then
-            echo ::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/} | tr / -)
+            echo ::set-output name=branch::$(${GITHUB_REF#refs/heads/} | tr / -)
           elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
-            echo ::set-output name=branch::$(echo ${GITHUB_HEAD_REF} | tr / -)
+            echo ::set-output name=branch::$(${GITHUB_HEAD_REF} | tr / -)
           fi
 
       - name: Did we?
